--- a/Audit3/my-app/src/views/pages/css-module/CSSModule.module.css
+++ b/Audit3/my-app/src/views/pages/css-module/CSSModule.module.css
@@ -1,8 +1,8 @@
-:global(.main-content) {
+/* :global(.main-content) {
   .counter {
     border-color: aqua;
   }
-}
+} */
 .counter {
   display: flex;
   align-items: center;
