--- a/Audit3/my-app/src/views/pages/debugging/UserCRUD.css
+++ b/Audit3/my-app/src/views/pages/debugging/UserCRUD.css
@@ -163,6 +163,9 @@ img {
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
+.bg-blue {
+  background-color: cyan
+}
 button,
 input,
 optgroup,
